--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 </head>
 
 <body>
+   <title>n/m polygons simulators </title>
    <h1>n/m polygon method</h1>
    <div class="grid text-center" style="--bs-columns: 10; --bs-gap: 1rem">
       <div id="midcolumn">
          <div class="g-col-6">
-            <canvas id="turtlecanvas" width="700" height="700"></canvas>
-            <canvas id="imagecanvas" width="700" height="700" style="display: none"></canvas>
+            <canvas id="turtlecanvas" width="800" height="800"></canvas>
+            <canvas id="imagecanvas" width="800" height="800" style="display: none"></canvas>
          </div>
       </div>
       <div class="inputs">
