--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
    <link type="text/css" rel="stylesheet" href="lib/turtle.css" />
    <meta charset="utf-8" />
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+   
 </head>
 
 <body>
    <title>n/m polygons simulators </title>
-   <h1>n/m polygon method</h1>
+   <h1>n/m polygon simulation</h1>
    <div class="grid text-center" style="--bs-columns: 10; --bs-gap: 1rem">
       <div id="midcolumn">
          <div class="g-col-6">
